--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -19,5 +19,15 @@ For assistance submitting this information, please contact [CONTACT EMAIL FOR PL
 <br>
 <div class="form-group">
 	<label for="name">Email Address</label>
+	<input type="text" class="form-control" id="email" required>
+</div>
+<br>
+<div class="form-group">
+	<label for="name">Child's Name</label>
+	<input type="text" class="form-control" id="name" required>
+</div>
+<br>
+<div class="form-group">
+	<label for="name">Child's Name</label>
 	<input type="text" class="form-control" id="name" required>
 </div>
