--- a/mitzvah/src/app/not-found/not-found.component.html
+++ b/mitzvah/src/app/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 What do you want to do?
 <ul>
 	<li><a routerLink='/form'>Submit your child's information</a></li>
-	<li><a routerLink='/'>View current TENTATIVE B'nai Mitzvah schedule (not set up yet)</a></li>
+	<li><a routerLink='/schedule'>View current TENTATIVE B'nai Mitzvah schedule (not set up yet)</a></li>
 </ul>
