--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -1,6 +1,3 @@
-<p>
-	form works!
-</p>
 <!-- <h3>Schools</h3>
 <div class="grid grid-pad">
 	<a *ngFor="let school of schools" class="col-1-4">
@@ -17,6 +14,7 @@
 For assistance submitting this information, please contact [CONTACT EMAIL FOR PLANNING]</p>
 <br>
 <br>
+<div style="margin:50px;padding:50px;">
 <div class="form-group">
 	<label for="name">Email Address</label>
 	<input type="text" class="form-control" id="email" required>
@@ -31,3 +29,11 @@ For assistance submitting this information, please contact [CONTACT EMAIL FOR PL
 	<label for="name">Child's Name</label>
 	<input type="text" class="form-control" id="name" required>
 </div>
+
+<div style="margin:15px;padding:15px;" class="form-group">
+	<app-datepicker></app-datepicker>
+</div>
+
+</div>
+
+
