--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -30,8 +30,8 @@ For assistance submitting this information, please contact [CONTACT EMAIL FOR PL
 	<input type="text" class="form-control" id="name" required>
 </div>
 
-<div style="margin:15px;padding:15px;" class="form-group">
-	<app-datepicker></app-datepicker>
+<div class="form-group">
+	<app-datepicker ></app-datepicker>
 </div>
 
 </div>
