--- a/mitzvah/src/app/datepicker/datepicker.component.html
+++ b/mitzvah/src/app/datepicker/datepicker.component.html
@@ -1,6 +1,6 @@
 <p>Simple datepicker</p>
 <!-- outsideDays="hidden" firstDayOfWeek="0" -->
-<ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next" [markDisabled]="isDisabled"></ngb-datepicker>
+<ngb-datepicker #dp [(ngModel)]="model" outsideDays="hidden" (navigate)="date = $event.next" [markDisabled]="isDisabled"></ngb-datepicker>
 
 <hr/>
 
