--- a/mitzvah/src/app/datepicker/datepicker.component.html
+++ b/mitzvah/src/app/datepicker/datepicker.component.html
@@ -1,15 +1,15 @@
 <p>Simple datepicker</p>
 <!-- outsideDays="hidden" firstDayOfWeek="0" -->
-<ngb-datepicker #dp [(ngModel)]="model" outsideDays="hidden" (navigate)="date = $event.next" [markDisabled]="isDisabled"></ngb-datepicker>
+<ngb-datepicker #dp [(ngModel)]="model" outsideDays="hidden" (navigate)="date = $event.next" (select)="j_update()" [markDisabled]="isDisabled"></ngb-datepicker>
 
 <hr/>
 
 <button class="btn btn-sm btn-outline-primary" (click)="selectThisWeek()">Select This Saturday</button>
-<button class="btn btn-sm btn-outline-primary" (click)="selectToday()">Select Today</button>
 <button class="btn btn-sm btn-outline-primary" (click)="dp.navigateTo()">To current month</button>
-<button class="btn btn-sm btn-outline-primary" (click)="dp.navigateTo({year: 2013, month: 2})">To Feb 2013</button>
+<button class="btn btn-sm btn-outline-primary" (click)="dp.navigateTo({year: 2005, month: 1})">To Jan 2005</button>
 
 <hr/>
 
 <pre>Month: {{ date.month }}.{{ date.year }}</pre>
 <pre>Model: {{ model | json }}</pre>
+<pre>jDate: {{jDate | json }}</pre>
