--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -30,9 +30,9 @@ For assistance submitting this information, please contact [CONTACT EMAIL FOR PL
 	<input type="text" class="form-control" id="name" required>
 </div>
 
-<div class="form-group">
-	<app-datepicker ></app-datepicker>
-</div>
+<!-- TODO - TAKE OUT THIS ngFor -->
+<app-datepicker></app-datepicker>
+
 
 </div>
 
