--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -12,28 +12,21 @@
 <p>Please fill in the information below to help Sinai Temple plan and schedule your child's B'nai Mitzvah
 	Forms submitted by March 15 th 2018 will be given first preference in terms of dates and venue selection.
 For assistance submitting this information, please contact [CONTACT EMAIL FOR PLANNING]</p>
-<br>
-<br>
-<div style="margin:50px;padding:50px;">
-<div class="form-group">
-	<label for="name">Email Address</label>
-	<input type="text" class="form-control" id="email" required>
-</div>
-<br>
-<div class="form-group">
-	<label for="name">Child's Name</label>
-	<input type="text" class="form-control" id="name" required>
-</div>
-<br>
-<div class="form-group">
-	<label for="name">Child's Name</label>
-	<input type="text" class="form-control" id="name" required>
-</div>
-
-<!-- TODO - TAKE OUT THIS ngFor -->
-<app-datepicker></app-datepicker>
 
 
-</div>
+<app-form-student [hidden]="step!==1"></app-form-student>
+<app-form-venue [hidden]="step!==2"></app-form-venue>
+<app-form-date [hidden]="step!==3"></app-form-date>
+<app-form-accommodation [hidden]="step!==4"></app-form-accommodation>
+
+
+<button class="btn btn-secondary btn-lg active" (click)="back()" [disabled]="step===1">BACK</button>
+<button class="btn btn-secondary btn-lg active" (click)="forward()" [disabled]="step===4">NEXT</button>
+
+<br>
+
+
+<!-- <app-datepicker></app-datepicker> -->
+
 
 
