--- a/mitzvah/src/app/form-venue/form-venue.component.html
+++ b/mitzvah/src/app/form-venue/form-venue.component.html
@@ -1,14 +1,56 @@
-<p>
-  form-venue works!
-</p>
-
-VENUE RANKER
-<br>
-
-<div class="form-group">
-	<label for="name">Estimated Number of Guests</label>
-	<form action="">
-	  <input type="radio" name="guests" value=0>Under 200<br>
-	  <input type="radio" name="guests" value=1> Over 200<br>
-	</form>
+<div class="container" style="width:50%">
+	<div class="row">
+		<div class="col">
+			Main Sanctuary
+		</div>
+		<div class="col">
+			<div class="btn-group btn-group-toggle" ngbRadioGroup name="venue1" [(ngModel)]="model1">
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="1"> Preferred
+				</label>
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="0"> No preference
+				</label>
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="-1"> Would not like this venue
+				</label>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			Family Minyan
+		</div>
+		<div class="col">
+			<div class="btn-group btn-group-toggle" ngbRadioGroup name="venue2" [(ngModel)] = "model2">
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="1"> Preferred
+				</label>
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="0"> No preference
+				</label>
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="-1"> Would not like this venue
+				</label>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			Torah in the Round
+		</div>
+		<div class="col">
+			<div class="btn-group btn-group-toggle" ngbRadioGroup name="venue3" [(ngModel)]="model3">
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="1"> Preferred
+				</label>
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="0"> No preference
+				</label>
+				<label ngbButtonLabel class="btn-primary">
+					<input ngbButton type="radio" [value]="-1"> Would not like this venue
+				</label>
+			</div>
+		</div>
+	</div>
 </div>
