--- a/mitzvah/src/app/form-student/form-student.component.html
+++ b/mitzvah/src/app/form-student/form-student.component.html
@@ -12,7 +12,7 @@
 <br>
 Date of Birth:
 <br>
-<app-datepicker [multi]="false" [onlySaturdays]="false" #d="ngbDatepicker" (focus)="d.open()"></app-datepicker>
+<app-datepicker [multi]="false" [onlySaturdays]="false"></app-datepicker>
 <div class="form-group">
 	<label for="name">Religious School</label>
 	<input type="text" class="form-control" id="school-religious" required>
