--- a/mitzvah/src/app/datepicker/datepicker.component.html
+++ b/mitzvah/src/app/datepicker/datepicker.component.html
@@ -1,26 +1,29 @@
-<button class="btn btn-sm btn-outline-primary" (click)="push_date()" *ngIf="multi">New date</button>
+<button class="btn btn-sm btn-outline-primary" (click)="push_date()" *ngIf="multi">{{models?.length==0 ? "I will be unavailable on..." : "I will also be unavailable on..."}}</button>
 <br>
-<!-- <ngb-datepicker #dp [(ngModel)]="model" outsideDays="hidden" (navigate)="date = $event.next" (select)="j_update()" [markDisabled]="isDisabled"></ngb-datepicker> -->
 <div style="display:flex; flex-flow: row wrap;">
-	<div style="flex:1; flex-basis: 25%;" *ngFor="let mod of models">
+	<div style="flex:1; flex-basis: 25%;" *ngFor="let mod of models; index as i;">
 		<div style="display: inline-block; border: 2px solid black;padding: 15px; margin: 5px; border-radius: 12px;">
 			<div>
 				<b>{{mod.hdate_str}} -- {{mod.hdate_str_heb}}</b>
 				<br>
-				<ngb-datepicker #dp="ngbDatepicker" (navigate)="date = $event.next" [(ngModel)]="mod.greg" outsideDays="hidden" (select)="mod.update()" [markDisabled]="onlySaturdays ? isNotSaturday : allFalse" [minDate]="minDate" [maxDate]="maxDate"></ngb-datepicker>
+				<ngb-datepicker #dp (navigate)="date = $event.next" [(ngModel)]="mod.greg" outsideDays="hidden" (select)="mod.update()" [markDisabled]="onlySaturdays ? isNotSaturday : allFalse" [minDate]="minDate" [maxDate]="maxDate"></ngb-datepicker>
 				<br><br>
-				<button class="btn btn-sm btn-outline-info" (click)="mod.selectThisWeek(); dp.navigateTo({ year: mod.greg.year, month: mod.greg.month });">This Saturday</button>
 				<div *ngIf="multi;else elseBlock2">
+					<div *ngIf="have_birthday==true">
+						<button class="btn btn-sm btn-outline-info" (click)="mod.thirteen_from_h(birthday); sync(dp,mod.greg);">
+						Approximate Mitzvah Date
+						</button>
+						<br>
+					</div>
 					<button class="btn btn-sm btn-outline-warning" (click)="pop_date(i)">
 					Remove date
 					</button>
 				</div>
 				<ng-template #elseBlock2>
-					<button class="btn btn-sm btn-outline-info" (click)="mod.thirteen_ago(); dp.navigateTo({ year: mod.greg.year, month: mod.greg.month})">
-						Thirteen Years Ago...
-					</button>
+				<button class="btn btn-sm btn-outline-info" (click)="mod.thirteen_ago(); dp.navigateTo({ year: mod.greg.year, month: mod.greg.month})">
+				Thirteen Years Ago...
+				</button>
 				</ng-template>
-
 			</div>
 			<br>
 			<div>
@@ -35,26 +38,7 @@
 				</ng-template>
 			</div>
 		</div>
-		<!-- <ul>
-			<li>Hebrew Date (Roman) : {{mod.hdate_str}}</li>
-			<li>Hebrew Date : {{mod.hdate_str_heb}}</li>
-			<li>Gregorian Date : {{mod.greg.month + "/" + mod.greg.day + "/" + mod.greg.year}}</li>
-			<li>Number of days in (Hebrew) month : {{mod.hdays_in_month}}</li>
-			<li>Gregorian Date (backconverted): {{mod.hgregorian | date}}</li>
-			<li>Gregorian Date Eve (backconverted) : {{mod.hgregorian_eve | date}} </li>
-		</ul> -->
 	</div>
 </div>
 <hr/>
-<!-- <button class="btn btn-sm btn-outline-primary" (click)="selectThisWeek()">Select This Saturday</button>
-<button class="btn btn-sm btn-outline-primary" (click)="dp.navigateTo()">To current month</button>
-<button class="btn btn-sm btn-outline-primary" (click)="dp.navigateTo({year: 2005, month: 1})">To Jan 2005</button> -->
-<!-- <hr/>
-   <pre>
-	    {{models | json}}
-</pre>
-<pre>minDate : {{minDate | json}}</pre>
-<pre>maxDate : {{maxDate | json}}</pre> -->
-<!-- <pre>Month: {{ date.month }}.{{ date.year }}</pre>
-<pre>Model: {{ model | json }}</pre>
-<pre>jDate: {{jDate | json }}</pre> -->
+
