--- a/mitzvah/src/app/form-date/form-date.component.html
+++ b/mitzvah/src/app/form-date/form-date.component.html
@@ -1,2 +1,2 @@
-Dates Unavailable:
-<app-datepicker [multi]="true" [onlySaturdays]="true"></app-datepicker>
+<h3>Please select any dates you know will not work for your child's B'nai Mitzvah</h3>
+<app-datepicker #dp [multi]="true" [onlySaturdays]="true"></app-datepicker>
