--- a/mitzvah/src/app/form-student/form-student.component.html
+++ b/mitzvah/src/app/form-student/form-student.component.html
@@ -12,7 +12,16 @@
 <br>
 Date of Birth:
 <br>
-<app-datepicker [multi]="false" [onlySaturdays]="false"></app-datepicker>
+
+
+
+<app-datepicker #dp [multi]="false" [onlySaturdays]="false"></app-datepicker>
+
+
+
+
+
+
 <div class="form-group">
 	<label for="name">Religious School</label>
 	<input type="text" class="form-control" id="school-religious" required>
