--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -14,15 +14,15 @@
 For assistance submitting this information, please contact [CONTACT EMAIL FOR PLANNING]</p>
 
 
-<app-form-student [hidden]="step!==1"></app-form-student>
-<app-form-venue [hidden]="step!==2"></app-form-venue>
-<app-form-date [hidden]="step!==3"></app-form-date>
-<app-form-accommodation [hidden]="step!==4"></app-form-accommodation>
+<app-form-student #studentform [hidden]="step!==0"></app-form-student>
+<app-form-venue #venueform [hidden]="step!==1"></app-form-venue>
+<app-form-date #dateform [hidden]="step!==2"></app-form-date>
+<app-form-accommodation #accommodationform [hidden]="step!==3"></app-form-accommodation>
 
 <br>
 
-<button class="btn btn-secondary btn-lg active" (click)="back()" [disabled]="step===1">BACK</button>
-<button class="btn btn-secondary btn-lg active" (click)="forward()" [disabled]="step===4">NEXT</button>
+<button class="btn btn-secondary btn-lg active" (click)="move(-1)" [disabled]="step===0">BACK</button>
+<button class="btn btn-secondary btn-lg active" (click)="move(1)" [disabled]="step===3">NEXT</button>
 
 <br>
 
