refactored datepicker out of one component

--- a/mitzvah/src/app/form-accommodation/form-accommodation.component.html
+++ b/mitzvah/src/app/form-accommodation/form-accommodation.component.html
@@ -25,6 +25,6 @@ What special accommodations will your child need for their service?
 <div *ngIf="accommodation">
 	<div class="form-group">
 		<label for="accommodation">Additional accommodation needed</label>
-		<input type="text" [(ngModel)]="accommodation" class="form-control">
+		<input type="text" [(ngModel)]="accommodation_other" class="form-control">
 	</div>
 </div>
