religious school and school selector elements

--- a/mitzvah/src/app/app.component.html
+++ b/mitzvah/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1>
-Welcome to Bar Mitzvah Scheduling!
+Welcome to B'nai Mitzvah Scheduling!
 <br>
 <a routerLink="/form">Enter your child's information</a>
 <br>
