--- a/mitzvah/src/app/form/form.component.html
+++ b/mitzvah/src/app/form/form.component.html
@@ -17,4 +17,6 @@
 	<p><ngb-progressbar type="success" [value]="step*25"></ngb-progressbar></p>
 	<br>
 	<br>
+
+	<pre>formService.entry: {{formService.entry | json}}</pre>
 </div>
